--- a/trunk/src/widgets/MissionParameterUI.ui
+++ b/trunk/src/widgets/MissionParameterUI.ui
@@ -361,6 +361,13 @@ high temperature resolution:	16 bit</string>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
+  <tabstop>pSamplingRate</tabstop>
+  <tabstop>pEnRollover</tabstop>
+  <tabstop>pEnHighTempRes</tabstop>
+  <tabstop>pSetMissionStartTime</tabstop>
+  <tabstop>pMissionStartTime</tabstop>
+  <tabstop>btnTimeNow</tabstop>
+  <tabstop>pEnTempCalib</tabstop>
   <tabstop>btnSave</tabstop>
   <tabstop>btnClose</tabstop>
  </tabstops>
