--- a/src/widgets/IAssist.ui
+++ b/src/widgets/IAssist.ui
@@ -13,7 +13,7 @@
     <x>0</x>
     <y>0</y>
     <width>292</width>
-    <height>316</height>
+    <height>329</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -35,7 +35,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>60</y>
+     <y>70</y>
      <width>271</width>
      <height>51</height>
     </rect>
@@ -54,7 +54,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>20</y>
      <width>271</width>
      <height>51</height>
     </rect>
@@ -73,7 +73,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>160</y>
+     <y>170</y>
      <width>271</width>
      <height>51</height>
     </rect>
@@ -89,7 +89,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>260</y>
+     <y>270</y>
      <width>271</width>
      <height>51</height>
     </rect>
@@ -108,7 +108,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>110</y>
+     <y>120</y>
      <width>271</width>
      <height>51</height>
     </rect>
@@ -127,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>210</y>
+     <y>220</y>
      <width>271</width>
      <height>51</height>
     </rect>
@@ -137,6 +137,19 @@
    </property>
    <property name="text">
     <string>&amp;Visualize Measurements</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="txtDeploymentName">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>0</y>
+     <width>221</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>DeploymentName</string>
    </property>
   </widget>
  </widget>
