--- a/trunk/src/widgets/DeploymentSelectUI.ui
+++ b/trunk/src/widgets/DeploymentSelectUI.ui
@@ -103,7 +103,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>30</y>
+      <y>27</y>
       <width>141</width>
       <height>32</height>
      </rect>
@@ -149,7 +149,7 @@
     </property>
    </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -160,6 +160,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout"/>
   </widget>
+  <zorder>layoutWidget</zorder>
   <zorder>groupBox_2</zorder>
   <zorder>groupBox</zorder>
   <zorder>btnQuit</zorder>
